# sumi

./: .gitignore  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  README.md  README_CN.md  README_TW.md  dev-cuda.sh  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
.github/workflows/: claude-code-review.yml  release.yml
capabilities/: default.json
frontend/: i18n.js  index.html  main.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/i18n/: en.json  zh-TW.json
frontend/src/i18n/: af.json  ar.json  az.json  be.json  bg.json  bs.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gl.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  kk.json  kn.json  ko.json  lt.json  lv.json  mi.json  mk.json  mr.json  ms.json  ne.json  nl.json  no.json  (+18 more)
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
frontend/src/lib/components/: CloudConfigPanel.svelte  InstructionCard.svelte  Keycaps.svelte  Modal.svelte  ProgressBar.svelte  SectionHeader.svelte  SegmentedControl.svelte  Select.svelte  SettingRow.svelte  Toggle.svelte
frontend/src/lib/stores/: i18n.svelte.ts  iconCache.svelte.ts  settings.svelte.ts  ui.svelte.ts
frontend/src/main/: App.svelte
frontend/src/main/components/: ConfirmModal.svelte  DictEditorModal.svelte  HistoryDetailModal.svelte  RuleCard.svelte  RuleEditorModal.svelte  RuleGridCard.svelte  SetupOverlay.svelte  Sidebar.svelte
frontend/src/main/components/settings/: BehaviorSection.svelte  DangerZone.svelte  HotkeySection.svelte  LanguageSection.svelte  MicSection.svelte  PolishSection.svelte  SttSection.svelte
frontend/src/main/pages/: AboutPage.svelte  DictionaryPage.svelte  HistoryPage.svelte  MeetingPage.svelte  PromptRulesPage.svelte  SettingsPage.svelte  StatsPage.svelte  TestWizard.svelte
frontend/src/overlay/: App.svelte
frontend/src/styles/: global.css
icons/: icon.icns
scripts/: bump.sh  release-windows.sh  release.sh  sync-i18n.mjs
src/: audio.rs  audio_devices.rs  audio_import.rs  commands.rs  context_detect.rs  credentials.rs  diarization.rs  history.rs  hotkey.rs  lib.rs  main.rs  meeting_feeder.rs  meeting_notes.rs  permissions.rs  polisher.rs  qwen3_asr.rs  segment_spacing.rs  settings.rs  stt.rs  system_info.rs  transcribe.rs  whisper_models.rs  whisper_streaming.rs
src/models/: mistral3.rs  mod.rs  phi4.rs
src/platform/: fallback.rs  macos.rs  mod.rs  windows.rs
