[package]
name = "sumi"
version = "0.1.2"
edition = "2021"
description = "Your voice, in writing — AI-powered speech-to-text for macOS"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = { version = "0.15", features = ["metal"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
llama-cpp-2 = { version = "0.1", default-features = false, features = ["metal", "sampler"] }
hound = "3"
dirs = "6"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
