[package]
name = "sumi"
version = "0.3.2"
edition = "2021"
description = "Your voice, in writing — AI-powered speech-to-text"
license = "GPL-3.0-or-later"

[features]
default = ["metal"]
metal = ["whisper-rs/metal", "candle-core/metal", "candle-transformers/metal"]
cuda = ["whisper-rs/cuda", "candle-core/cuda", "candle-transformers/cuda"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = "0.15"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
tokenizers = { version = "0.22", features = ["onig"] }
hound = "3"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
image = { version = "0.25", default-features = false, features = ["png"] }
unicode-segmentation = "1.12.0"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
